Added styles for all sections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,19 @@
 {
 	"cSpell.words": [
+		"amana",
+		"Caney",
+		"dacor",
 		"Druk",
+		"electrolux",
 		"HVAC",
+		"jenn",
 		"obolochka",
+		"paykel",
 		"Shkodina",
+		"tappan",
+		"thermador",
+		"Tomball",
+		"whirpool",
 		"Yota"
 	]
 }
