Creted 9 pages for each service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,16 +7,24 @@
 		"electrolux",
 		"hiderows",
 		"HVAC",
+		"Ivation",
 		"jenn",
+		"Kalamera",
 		"kitchenaid",
 		"Liebherr",
+		"miele",
+		"Nutri",
 		"obolochka",
 		"paykel",
 		"Shkodina",
+		"smartboard",
+		"smeg",
+		"stovetop",
 		"svgicons",
 		"tappan",
 		"thermador",
 		"Tomball",
+		"touchpad",
 		"whirpool",
 		"Yota"
 	]
